syntax = "proto3";

package resources.qualifications;

import "google/protobuf/duration.proto";
import "resources/common/content/content.proto";
import "resources/file/file.proto";
import "resources/qualifications/access.proto";
import "resources/qualifications/exam.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/qualifications;qualifications";

message Qualification {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  string job = 5 [(validate.rules).string.max_len = 20];
  uint32 weight = 6 [(validate.rules).uint32.lt = 4294967295];
  bool closed = 7;
  bool draft = 8;
  bool public = 9;
  // @sanitize: method=StripTags
  string abbreviation = 10 [(validate.rules).string.max_len = 20];
  // @sanitize
  string title = 11 [(validate.rules).string = {
    min_len: 3,
    max_len: 1024
  }];
  // @sanitize: method=StripTags
  optional string description = 12 [(validate.rules).string.max_len = 512];
  resources.common.content.Content content = 13;
  optional int32 creator_id = 14 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort creator = 15; // @gotags: alias:"creator"
  string creator_job = 16 [(validate.rules).string.max_len = 20];
  resources.qualifications.QualificationAccess access = 17;
  repeated QualificationRequirement requirements = 18;
  bool discord_sync_enabled = 19;
  optional QualificationDiscordSettings discord_settings = 20;
  QualificationExamMode exam_mode = 21 [(validate.rules).enum.defined_only = true];
  optional QualificationExamSettings exam_settings = 22;
  optional resources.qualifications.ExamQuestions exam = 23;
  optional QualificationResult result = 24;
  optional QualificationRequest request = 25;
  bool label_sync_enabled = 26;
  // @sanitize: method=StripTags
  optional string label_sync_format = 27 [(validate.rules).string.max_len = 128];
  repeated resources.file.File files = 28; // @gotags: alias:"files"
}

message QualificationShort {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  string job = 5 [(validate.rules).string.max_len = 20];
  uint32 weight = 6 [(validate.rules).uint32.lt = 4294967295];
  bool closed = 7;
  bool draft = 8;
  bool public = 9;
  // @sanitize: method=StripTags
  string abbreviation = 10 [(validate.rules).string.max_len = 20];
  // @sanitize
  string title = 11 [(validate.rules).string = {
    min_len: 3,
    max_len: 1024
  }];
  // @sanitize: method=StripTags
  optional string description = 12 [(validate.rules).string.max_len = 512];
  optional int32 creator_id = 14 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort creator = 15; // @gotags: alias:"creator"
  string creator_job = 16 [(validate.rules).string.max_len = 20];
  repeated QualificationRequirement requirements = 18;
  QualificationExamMode exam_mode = 21 [(validate.rules).enum.defined_only = true];
  optional QualificationExamSettings exam_settings = 22;
  optional QualificationResult result = 24;
}

message QualificationRequirement {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 qualification_id = 3;
  uint64 target_qualification_id = 4;
  optional QualificationShort target_qualification = 5; // @gotags: alias:"targetqualification.*"
}

// @dbscanner: json
message QualificationDiscordSettings {
  optional string role_name = 1 [(validate.rules).string.max_len = 64];
  optional string role_format = 2 [(validate.rules).string.max_len = 64];
}

enum QualificationExamMode {
  QUALIFICATION_EXAM_MODE_UNSPECIFIED = 0;
  QUALIFICATION_EXAM_MODE_DISABLED = 1;
  QUALIFICATION_EXAM_MODE_REQUEST_NEEDED = 2;
  QUALIFICATION_EXAM_MODE_ENABLED = 3;
}

// @dbscanner: json
message QualificationExamSettings {
  google.protobuf.Duration time = 1 [(validate.rules).duration = {
    required: true,
    lt: {seconds: 1036800}, // 24 hours
    gte:  {seconds: 300}, // 5 minutes
  }];
  bool auto_grade = 2;
  AutoGradeMode auto_grade_mode = 3 [(validate.rules).enum.defined_only = true];
  int32 minimum_points = 4;
}

enum AutoGradeMode {
  AUTO_GRADE_MODE_UNSPECIFIED = 0;
  AUTO_GRADE_MODE_STRICT = 1;
  AUTO_GRADE_MODE_PARTIAL_CREDIT = 2;
}

enum RequestStatus {
  REQUEST_STATUS_UNSPECIFIED = 0;
  REQUEST_STATUS_PENDING = 1;
  REQUEST_STATUS_DENIED = 2;
  REQUEST_STATUS_ACCEPTED = 3;
  REQUEST_STATUS_EXAM_STARTED = 4;
  REQUEST_STATUS_EXAM_GRADING = 5;
  REQUEST_STATUS_COMPLETED = 6;
}

message QualificationRequest {
  optional resources.timestamp.Timestamp created_at = 1;
  optional resources.timestamp.Timestamp deleted_at = 2;
  uint64 qualification_id = 3; // @gotags: sql:"primary_key" alias:"qualification_id"
  optional QualificationShort qualification = 4;
  int32 user_id = 5 [(validate.rules).int32.gte = 0]; // @gotags: sql:"primary_key"
  resources.users.UserShort user = 6; // @gotags: alias:"user"
  // @sanitize: method=StripTags
  optional string user_comment = 7 [(validate.rules).string = {max_len: 512}];
  optional RequestStatus status = 8 [(validate.rules).enum.defined_only = true];
  optional resources.timestamp.Timestamp approved_at = 9;
  // @sanitize: method=StripTags
  optional string approver_comment = 10 [(validate.rules).string = {max_len: 512}];
  optional int32 approver_id = 11 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort approver = 12; // @gotags: alias:"approver"
  optional string approver_job = 13;
}

enum ResultStatus {
  RESULT_STATUS_UNSPECIFIED = 0;
  RESULT_STATUS_PENDING = 1;
  RESULT_STATUS_FAILED = 2;
  RESULT_STATUS_SUCCESSFUL = 3;
}

message QualificationResult {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp deleted_at = 3;
  uint64 qualification_id = 4;
  optional QualificationShort qualification = 5;
  int32 user_id = 6 [(validate.rules).int32.gte = 0];
  resources.users.UserShort user = 7; // @gotags: alias:"user"
  ResultStatus status = 8 [(validate.rules).enum.defined_only = true];
  optional float score = 9 [(validate.rules).float = {gte: 0, lte: 1000}];
  // @sanitize: method=StripTags
  string summary = 10 [(validate.rules).string.max_len = 512];
  int32 creator_id = 11 [(validate.rules).int32.gt = 0];
  resources.users.UserShort creator = 12; // @gotags: alias:"creator"
  string creator_job = 13 [(validate.rules).string.max_len = 20];
}
